# YasashiiServer

./: .gitignore  CMakeLists.txt  README.md
include/YasashiiServer/: ApiDefinition.h  ClientHelper.h  Exceptions.h  Handler.h  SerializationTypes.h  ServerHelper.h  Utility.hpp  apiDefinition.h
include/YasashiiServer/Client/: ClientHelper.h
include/YasashiiServer/Common/: ApiDefinition.h  Logger.h
include/YasashiiServer/Common/Types/: SerializationTypes.h  TypeHelper.h  Types.hpp
include/YasashiiServer/Server/: Handler.h  ServerHelper.h
include/YasashiiServer/Types/: ISeralizable.h  SampleClass.h  SerializationTypes.h  Types.h
proto/: BasicOperations.proto  CMakeLists.txt
proto/Types/: ExampleType.proto
scripts/: recompileProto.sh
src/client/: ClientHelper.cpp  main.cpp
src/common/: Logger.cpp  TypeHelper.cpp  Types.cpp
src/server/: Handler.cpp  ServerHelper.cpp  main.cpp
